--- a/superset用户手册/权限控制.md
+++ b/superset用户手册/权限控制.md
@@ -40,11 +40,11 @@ By setting `PUBLIC_ROLE_LIKE_GAMMA = True` in your `superset_config.py`, you gra
 
 
 
-![1539569575004](C:\Users\yu.zhao\AppData\Roaming\Typora\typora-user-images\1539569575004.png)
+![1539569575004](../Typora截图存放\1539934484468.png)
 
 
 
-![1539569600133](C:\Users\yu.zhao\AppData\Roaming\Typora\typora-user-images\1539569600133.png)
+![1539569600133](../Typora截图存放\1539934503184.png)
 
 
 
@@ -54,11 +54,15 @@ By setting `PUBLIC_ROLE_LIKE_GAMMA = True` in your `superset_config.py`, you gra
 
 
 
-![1539569680569](C:\Users\yu.zhao\AppData\Roaming\Typora\typora-user-images\1539569680569.png)
+![1539569798779](../Typora截图存放\1539934702258.png)
 
 
 
-![1539569798779](C:\Users\yu.zhao\AppData\Roaming\Typora\typora-user-images\1539569798779.png)
+![1539569680569](../Typora截图存放\1539934675337.png)
+
+
+
+
 
 
 
@@ -68,11 +72,11 @@ By setting `PUBLIC_ROLE_LIKE_GAMMA = True` in your `superset_config.py`, you gra
 
 予了test01用户我们想要的权限
 
-![1539569863286](C:\Users\yu.zhao\AppData\Roaming\Typora\typora-user-images\1539569863286.png)
+![1539569863286](../Typora截图存放\1539934773880.png)
 
 
 
-![1539569911495](C:\Users\yu.zhao\AppData\Roaming\Typora\typora-user-images\1539569911495.png)
+![1539569911495](../Typora截图存放\1539934795096.png)
 
 
 
